--- a/src/index.scss
+++ b/src/index.scss
@@ -1,21 +1,25 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@400;500;700&display=swap');
+@import "./config";
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+
+body {
+  font-family: 'Hind Guntur', sans-serif;
+  font-size: 16px;
 }
 
 h1 {
   color: tomato;
+}
+
+.container {
+  background-color: aqua;
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0 0 0 $navbar-size;  
 }
