--- a/src/config.scss
+++ b/src/config.scss
@@ -6,11 +6,12 @@ $color-danger: #b10000;
 */
 $color-dark: #343434;
 $color-primary: #98BD2A;
-$color-secondary: #aaa;
+$color-silver: #e6e6e6;
 $color-white: #fff;
 
 // Breakbpoints
 $breakpoint-tablet: 760px;
+$breakpoint-desktop: 1280px;
 
 $navbar-size: 180px;
 $padding: 10px;
