--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -2,18 +2,18 @@
 
 button {
   align-items: center;
+  background-color: $color-silver;
   border: none;
   border-radius: 50px;
-  background-color: $color-primary;
   color: $color-white;
   display: flex;
   font-size: 1rem;
   font-weight: 600;
   padding: $padding * 0.75;
-  transition: $transition;  
+  transition: $transition;
+  user-select: none;
 
   &:hover {
-    background-color: darken($color-primary, 10);
     cursor: pointer;
     transition: $transition;
   }  
@@ -29,6 +29,24 @@ button {
       margin: 0 $padding * 1.5 0 $padding * -0.5;      
     }    
   }
+}
+
+.color {
+  &-primary {
+    background-color: $color-primary;
+
+    &:hover {
+      background-color: darken($color-primary, 10);
+    }
+  }
+
+  &-dark {
+    background-color: $color-dark;
+
+    &:hover {
+      background-color: darken($color-dark, 10);
+    }    
+  }  
 }
 
 .main {
