--- a/src/config.scss
+++ b/src/config.scss
@@ -1,11 +1,12 @@
 // Colors
+
 /*
 $color-active: #008b8b;
 $color-background: #000;
 $color-danger: #b10000;
 */
 $color-dark: #343434;
-$color-primary: #98BD2A;
+$color-primary: #98bd2a;
 $color-silver: #e6e6e6;
 $color-white: #fff;
 
