--- a/src/components/backbutton/BackButton.scss
+++ b/src/components/backbutton/BackButton.scss
@@ -5,7 +5,7 @@
   background-color: $color-primary;
   border-bottom-right-radius: 50px;
   border-top-right-radius: 50px;
-  bottom: 5vh;
+  bottom: 50%;
   color: $color-white;
   display: flex;
   justify-content: flex-end;
@@ -14,14 +14,15 @@
   position: fixed;
   transition: $transition;
   user-select: none;
-  width: 60px;
+  width: 40px;
+  z-index: 998;
 
   &:hover {
     background-color: darken($color-primary, 10);
     cursor: pointer;
     transition: $transition;
   }
-  
+
   .icon {
     font-size: 1.5rem;
   }
@@ -33,6 +34,8 @@
 
 @media (min-width: $breakpoint-tablet) {
   .back-link {
+    bottom: 5vh;
     left: $navbar-size;
+    width: 60px;
   }
 }
