--- a/src/components/booking/Booking.scss
+++ b/src/components/booking/Booking.scss
@@ -4,17 +4,22 @@
   background-color: $color-primary;
   color: $color-white;
   height: 100vh;
-  max-width: 380px;
+  max-width: 300px;
   width: 100%;
   padding: $padding*1.5;
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 999;
 
   h1 {
     color: $color-white;
     font-weight: 700;
     font-size: 1.5rem;
+  }
+
+  .form-field {
+    background-color: lighten($color-primary, 25);
   }
 }
 
@@ -32,7 +37,7 @@
   align-items: center;
   display: flex;
   height: 40px;
-  justify-content: center;  
+  justify-content: center;
   position: absolute;
   right: $padding;
   width: 40px;
@@ -59,7 +64,7 @@
 }
 
 .resume {
-  background-color: rgba($color-dark,0.25);
+  background-color: rgba($color-dark, 0.25);
   border-radius: $rounded;
   display: flex;
   margin-top: $padding*2;
