--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Guntur:wght@400;500;700&display=swap');
-@import "./config";
+@import "./config.scss";
 
 * {
   box-sizing: border-box;
@@ -23,8 +23,8 @@ h1 {
 .container {
   background-image: url('./assets/images/bg.jpg');
   background-repeat: no-repeat;
-  background-position: center left;
-  background-size: cover;
+  background-position: top center;
+  background-size: 100% auto;
   height: 100vh;
   width: 100%;
   margin: 0;
@@ -50,7 +50,7 @@ h1 {
     color: $color-dark;
     font-weight: 400;
     text-align: end;
-  }  
+  }
 
   p {
     line-height: 1.1em;
@@ -85,7 +85,7 @@ h1 {
   &-field {
     border: none;
     border-radius: $rounded;
-    font-size: 1.1rem;
+    font-size: 1rem;
     padding: $padding $padding*0.75;
     width: 100%;
   }
@@ -107,15 +107,13 @@ h1 {
 
 .whiteCortain {
   align-items: center;
-  background-color: aqua;
   background: rgba($color-white, 0.5);
-  background: linear-gradient(90deg, rgba($color-white, 0) 0%, rgba($color-white, 1) 100%);
+  background: linear-gradient(180deg, rgba($color-white, 0) 0%, rgba($color-white, 1) 20%);
   display: flex;
-  height: 100vh;
   justify-content: flex-end;
-  padding-right: 5vw;
+  padding: 20vh $padding 0 $padding;
   position: absolute;
-  top: 0;
+  top: 100px;
   right: 0;
   width: 100%;
 }
@@ -126,7 +124,10 @@ h1 {
 
 @media (min-width: $breakpoint-tablet) {
   .container {
+    background-position: center center;
+    background-size: cover;
     margin: 0 0 0 $navbar-size;
+    padding-right: 5vw;
     width: calc(100% - $navbar-size);
   }
 
@@ -135,18 +136,18 @@ h1 {
   }
 
   .whiteCortain {
+    background: linear-gradient(90deg, rgba($color-white, 0) 0%, rgba($color-white, 1) 100%);
+    height: 100vh;
+    top: 0;
     width: 60%;
   }
 }
 
 @media (min-width: $breakpoint-desktop) {
-  .container {
-    margin: 0 0 0 $navbar-size;
-    width: calc(100% - $navbar-size);
-  }  
   .detailBox {
     width: 50%;
-  }  
+  }
+
   .whiteCortain {
     width: 40%;
   }
