--- a/src/config.scss
+++ b/src/config.scss
@@ -14,6 +14,7 @@ $color-white: #fff;
 $breakpoint-tablet: 760px;
 $breakpoint-desktop: 1280px;
 
+$booking-size: 300px;
 $navbar-size: 220px;
 $padding: 10px;
 $rounded: 4px;
