--- a/src/components/booking/Booking.scss
+++ b/src/components/booking/Booking.scss
@@ -2,7 +2,7 @@
 
 .booking {
   background-color: $color-primary;
-  box-shadow: 0px 0px 15px 0px rgba($color-dark, 0.33);
+  box-shadow: 0 0 15px 0 rgba($color-dark, 0.33);
   color: $color-white;
   height: 100vh;
   max-width: $booking-size;
@@ -12,9 +12,8 @@
   right: 0;
   top: 0;
   z-index: 999;
-
-  -webkit-box-shadow: 0px 0px 15px 0px rgba($color-dark, 0.33);
-  -moz-box-shadow: 0px 0px 15px 0px rgba($color-dark, 0.33);  
+  -webkit-box-shadow: 0 0 15px 0 rgba($color-dark, 0.33);
+  -moz-box-shadow: 0 0 15px 0 rgba($color-dark, 0.33);
 
   h2 {
     color: $color-white;
