--- a/src/index.scss
+++ b/src/index.scss
@@ -118,6 +118,12 @@ h1 {
   width: 100%;
 }
 
+.division-span {
+  color: $color-silver;
+  width: 40%;
+  margin: $spacer auto $spacer auto;
+}
+
 // #######################################################################################
 // #################################### TABLET $ DESKTOP #################################
 // #######################################################################################
