--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,15 @@
   padding: 0;
 }
 
+a {
+  color: darken($color-primary, 15);
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 body {
   font-family: 'Hind Guntur', sans-serif;
   font-size: 16px;
@@ -95,7 +104,31 @@ h1 {
   display: none;
 }
 
+.info-container {
+  margin: 0 auto;
+  max-width: 960px;
+  width: 90%;
+}
+
 .page {
+  &-admin {
+    padding: $padding*5 0;
+  }
+
+  &-about {
+    background-image: url('./assets/images/about_bg.jpg') !important;
+    background-position: top center;
+    background-size: 100% auto;
+    display: flex;
+    justify-content: center;
+    padding: $padding*5 0;
+
+    p {
+      font-size: 1rem;
+      padding-bottom: $padding * 2;
+    }    
+  }
+
   &-booking {
     align-items: center;
     background-image: url('./assets/images/booking_bg.jpg') !important;
@@ -107,12 +140,143 @@ h1 {
 
     p {
       color: $color-white;
-      font-size: 1.25rem;
+      font-size: 1.15rem;
       padding-bottom: $padding * 2;
       max-width: 960px;
       width: 80%;
     }
   }
+
+  &-reservation {
+    padding: $padding*5 0;
+
+    article {
+      border: solid 1px $color-silver;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      margin-bottom: $padding * 2;
+      padding: $padding;
+
+      box-shadow: 0px 5px 5px 0px rgba($color-dark, 0.15);      
+      transition: $transition;
+
+      h2 {
+        font-size: 1.2rem;
+        font-weight: 400;
+        line-height: 1.1em;
+        margin: 0;
+        padding: 0;
+      }
+
+      h3 {
+        font-size: 1rem;
+        font-weight: 400;
+        margin: 0;
+        padding: 0;        
+      }
+
+      p {
+        margin: 0;
+        padding: 0;
+      }
+
+      &:hover {
+        box-shadow: 0px 5px 15px 0px rgba($color-dark, 0.25);
+        transition: $transition;
+      }
+
+      .dateRange {
+        display: grid;
+        gap: $padding * 2;
+        height: auto;
+        grid-template-columns: 1fr 1fr;
+
+        div {
+          text-align: center;
+          margin: 0;
+          padding: 0;
+        }
+
+        span {
+          background-color: lighten($color-dark, 33);
+          color: $color-white;
+          display: inline-block;
+          font-size: 0.85rem;
+          height: 22px;
+          margin: 0;
+          padding: 0;
+          text-align: center;
+          width: 50px;
+        }
+      }
+
+      .main-info {
+        align-items: center;
+        margin-bottom: $padding;
+        display: flex;
+      }
+
+      .photo {
+        background-image: url('./assets/images/bg.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;        
+        height: 70px;
+        margin-right: $padding;
+        width:  70px;
+      }
+    }
+
+    p {
+      font-size: 1rem;
+      padding-bottom: $padding * 2;
+    }    
+  }  
+}
+
+.stores {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+
+  p {
+    margin: 0;
+    padding: 0;
+  }
+
+  a {
+    background-color: $color-primary;
+    color: $color-white;
+    display: inline-block;
+    padding: 0 $padding;
+
+    &:hover {
+      background-color: darken($color-primary, 10);
+      text-decoration: none;
+    }
+  }
+}
+
+.table-admin {
+  border: 1px solid $color-silver;
+  width: 100%;
+  border-collapse: collapse;
+
+  a {
+    margin: 0 $padding/2;
+  }
+
+  td {
+    border: 1px solid $color-silver;
+    padding: $padding/2;
+  }
+
+  th {
+    background-color: $color-silver;
+    border: 1px solid $color-silver;
+    padding: $padding/2;
+  }  
 }
 
 .text {
@@ -126,6 +290,13 @@ h1 {
 
   &-start {
     text-align: left;
+  }
+}
+
+.w {
+  &-100 {
+    background-color: aqua;
+    width: 100%;
   }
 }
 
@@ -158,6 +329,20 @@ h1 {
     width: 75%;
   }
 
+  .page-reservation {
+    article {
+      flex-direction: row;
+    }
+
+    .main-info {
+      margin-bottom: 0;
+    }
+  }
+
+  .stores {
+    grid-template-columns: 1fr 1fr;
+  }
+
   .whiteCortain {
     background: linear-gradient(90deg, rgba($color-white, 0) 0%, rgba($color-white, 1) 100%);
     height: 100vh;
@@ -168,6 +353,10 @@ h1 {
 }
 
 @media (min-width: $breakpoint-desktop) {
+  .stores {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
   .whiteCortain {
     width: 40%;
   }
