Fix scroll in homepage

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@ h1 {
   background-size: 100% auto;
   min-height: 100vh;
   margin: 0;
-  padding: $padding;
+  // padding: $padding;
   position: relative;
   width: 100%;
 }
