--- a/src/index.scss
+++ b/src/index.scss
@@ -22,10 +22,10 @@ body {
 }
 
 h1 {
-  color: tomato;
+  color: $color-dark;
 }
 
-.add-padding-below {
+.add-margin-below {
   margin-bottom: $padding;
 }
 
@@ -40,7 +40,6 @@ h1 {
   background-size: 100% auto;
   min-height: 100vh;
   margin: 0;
-  // padding: $padding;
   position: relative;
   width: 100%;
 }
@@ -96,7 +95,7 @@ h1 {
   }
 
   &-field {
-    border: none;
+    border: solid 1px transparentize($color-dark, 0.66);
     border-radius: $rounded;
     font-size: 1rem;
     padding: $padding $padding*0.75;
