--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,83 @@ a {
   }
 }
 
+article {
+  border: solid 1px $color-silver;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: $padding * 2;
+  padding: $padding;
+  box-shadow: 0 5px 5px 0 rgba($color-dark, 0.15);
+  transition: $transition;
+
+  h2 {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.1em;
+    margin: 0;
+    padding: 0;
+  }
+
+  h3 {
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+  }
+
+  p {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
+  &:hover {
+    box-shadow: 0 5px 15px 0 rgba($color-dark, 0.25);
+    transition: $transition;
+  }
+
+  .dateRange {
+    display: grid;
+    gap: $padding * 2;
+    height: auto;
+    grid-template-columns: 1fr 1fr;
+
+    div {
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    span {
+      background-color: lighten($color-dark, 33);
+      color: $color-white;
+      display: inline-block;
+      font-size: 0.85rem;
+      height: 22px;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      width: 50px;
+    }
+  }
+
+  .main-info {
+    align-items: center;
+    margin-bottom: $padding;
+    display: flex;
+  }
+
+  .photo {
+    background-image: url('./assets/images/bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 70px;
+    margin-right: $padding;
+    width: 70px;
+  }
+}
+
 body {
   font-family: 'Hind Guntur', sans-serif;
   font-size: 16px;
@@ -31,6 +108,18 @@ h1 {
 
 .add-padding-horizontal {
   margin: 0 $padding;
+}
+
+.centerForm {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+
+  form {
+    width: 100%;
+  }
 }
 
 .container {
@@ -134,6 +223,7 @@ h1 {
 
 .page {
   &-admin {
+    height: auto;
     padding: $padding*5 0;
   }
 
@@ -175,83 +265,6 @@ h1 {
     p {
       font-size: 1rem;
       padding-bottom: $padding * 2;
-    }
-
-    article {
-      border: solid 1px $color-silver;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      margin-bottom: $padding * 2;
-      padding: $padding;
-      box-shadow: 0 5px 5px 0 rgba($color-dark, 0.15);
-      transition: $transition;
-
-      h2 {
-        font-size: 1.2rem;
-        font-weight: 400;
-        line-height: 1.1em;
-        margin: 0;
-        padding: 0;
-      }
-
-      h3 {
-        font-size: 1rem;
-        font-weight: 400;
-        margin: 0;
-        padding: 0;
-      }
-
-      p {
-        margin: 0;
-        padding: 0;
-      }
-
-      &:hover {
-        box-shadow: 0 5px 15px 0 rgba($color-dark, 0.25);
-        transition: $transition;
-      }
-
-      .dateRange {
-        display: grid;
-        gap: $padding * 2;
-        height: auto;
-        grid-template-columns: 1fr 1fr;
-
-        div {
-          text-align: center;
-          margin: 0;
-          padding: 0;
-        }
-
-        span {
-          background-color: lighten($color-dark, 33);
-          color: $color-white;
-          display: inline-block;
-          font-size: 0.85rem;
-          height: 22px;
-          margin: 0;
-          padding: 0;
-          text-align: center;
-          width: 50px;
-        }
-      }
-
-      .main-info {
-        align-items: center;
-        margin-bottom: $padding;
-        display: flex;
-      }
-
-      .photo {
-        background-image: url('./assets/images/bg.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-        height: 70px;
-        margin-right: $padding;
-        width: 70px;
-      }
     }
   }
 }
@@ -335,6 +348,10 @@ h1 {
 // #######################################################################################
 
 @media (min-width: $breakpoint-tablet) {
+  article {
+    flex-direction: row;
+  }
+
   .container {
     background-position: center center;
     background-size: cover;
@@ -371,10 +388,6 @@ h1 {
   }
 
   .page-reservation {
-    article {
-      flex-direction: row;
-    }
-
     .main-info {
       margin-bottom: 0;
     }
