--- a/src/routes/Login.scss
+++ b/src/routes/Login.scss
@@ -9,7 +9,6 @@
 
 .login-form {
   background-color: $color-primary;
-  border: $color-primary solid 1px;
   border-radius: $rounded;
   padding: 2rem;
   width: 100%;
@@ -18,8 +17,9 @@
   text-align: center;
   margin: auto;
   border: $rounded;
-  box-shadow: 20px 20px 40px #bebebe5f,
-    -20px -20px 60px #ffffff;
+  box-shadow:
+    20px 20px 40px #bebebe5f,
+    -20px -20px 60px #fff;
 
   h2 {
     color: white;
