inprove booking design

--- a/src/index.scss
+++ b/src/index.scss
@@ -255,6 +255,7 @@ h1 {
       font-size: 1.15rem;
       padding-bottom: $padding * 2;
       max-width: 960px;
+      text-shadow: 0px 2px 10px rgba($color-dark,1);
       width: 80%;
     }
   }
