Add conditional rendering func

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -127,6 +127,10 @@ nav {
   }
 }
 
+.logout-button {
+  margin: $padding 0 0 $padding;
+}
+
 .social-icons {
   padding: $padding;
   text-align: center;
