--- a/src/index.scss
+++ b/src/index.scss
@@ -197,7 +197,7 @@ h1 {
     display: flex;
     justify-content: space-between;
   }
-    
+
   &-simple {
     width: 100%;
   }
@@ -260,7 +260,7 @@ h1 {
       font-size: 1.15rem;
       padding-bottom: $padding * 2;
       max-width: 960px;
-      text-shadow: 0px 2px 10px rgba($color-dark,1);
+      text-shadow: 0 2px 10px rgba($color-dark, 1);
       width: 80%;
     }
   }
