--- a/src/index.scss
+++ b/src/index.scss
@@ -102,6 +102,13 @@ h1 {
   color: $color-dark;
 }
 
+
+.action-btn {
+  display: flex;
+  gap: $padding;
+
+}
+
 .add-margin-below {
   margin-bottom: $padding;
 }
@@ -207,6 +214,10 @@ h1 {
   }
 
   &-triple {
+    width: 100%;
+  }
+
+  &-cuadra {
     width: 100%;
   }
 }
@@ -390,6 +401,10 @@ h1 {
 
     &-triple {
       grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    &-cuadra {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
   }
 
